# ai-chronicles

./: README.md
ai-playground/: .env.example  README.md  demoNotebook.ipynb  demoRAG.ipynb  mcp_agent.py  mcp_server.py  multi_agent.py  notebook.ipynb  pyproject.toml  requirements.txt
ai-playground/knowledgeBase/company/: history.md  organization_structure.md
ai-playground/knowledgeBase/employees/: ankit.md  ankur.md  julia.md  jurriaan.md  mahesh.md  marcel.md  shweta.md
ai-playground/knowledgeBase/policies/: baggage-policy.md  checkin-policy.md  refund-policy.md
ai-playground/knowledgeBase/services/: loyalty_program.md
ai-playground/knowledgeBase_v2/company/: about.md  organization_structure.md  vision_mission.md
ai-playground/knowledgeBase_v2/employees/: azeddine_rida.md  dirk_van_der_laan.md  kevin_donker_curtius.md  mark_van_liempt.md  peter_van_vliet.md  robert_visser.md  shasha_kachko.md
ai-playground/knowledgeBase_v2/policies/: cancellation-policy.md  loyalty-policy.md  privacy-policy.md
ai-playground/knowledgeBase_v2/services/: ai_chat_support.md  flight_change.md  ticket_booking.md
